AAA-WorkProduct/lab 7/lab 7 stuff/diner-b-fixed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diner-b
  namespace: diner-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diner
  template:
    metadata:
      labels:
        app: diner
    spec:
      containers:
        - name: web
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: diner-b-html
