AAA-WorkProduct/lab 7/lab 7 stuff/ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diner-ingress
  namespace: diner-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: diner.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diner-svc   # Pointing at Diner A for now
            port:
              number: 80
